--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".CriarGrupo" />
         <activity android:name=".Grupos" />
         <activity android:name=".ParticiparGrupo" />
-        <activity android:name=".Eventos"></activity>
+        <activity android:name=".Eventos" />
+        <activity android:name=".Participacoes"></activity>
     </application>
 
 </manifest>
